--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,28 @@
+
+build/
+CMakeFiles/
+CMakeCache.txt
+
+
+*.o
+*.obj
+*.so
+*.dll
+*.exe
 *.out
+
+
+.idea/
+.vs/
+*.vcxproj*
+*.user
+*.sln
+
+
+*~
+*.swp
+*.bak
+*.log
+
+
 *.ppm
